Fix column menu button display
When column title is aligned on right, column menu button overlap
the column title. This will hide that text when column menu button
is visible.

Fixes #590

--- a/src/grid/grid.module.scss
+++ b/src/grid/grid.module.scss
@@ -158,6 +158,7 @@
   height: 100%;
   display: flex;
   align-items: center;
+  background-color: var(--bs-table-th-bg);
   .rtl & {
     right: unset;
     left: 0;
